--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <title>Dungeons & Dragons 2024 Campaign</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>My site, first commit</p>
+    <div class="nav">
+      <home>Home</home>
+      <dir>Directory</dir>
+      <down>Downloads</down>
+    </div>
+    <div class="main">
+      <p>My site, first commit</p>
+    </div>
   </body>
 </html>
