--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <div class="nav">
-      <home>Home</home>
-      <dir>Directory</dir>
-      <down>Downloads</down>
+      <navbox href="home">Home</navbox>
+      <navbox href="dir">Directory</navbox>
+      <navbox href="down">Downloads</navbox>
     </div>
     <div class="main">
       <p>My site, first commit</p>
