--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Dungeons & Dragons 2024 Campaign</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="nav">
-      <navbox href="home">Home</navbox>
-      <navbox href="dir">Directory</navbox>
-      <navbox href="down">Downloads</navbox>
-    </div>
-    <div class="main">
-      <p>My site, first commit</p>
-    </div>
-  </body>
+<head>
+  <title>The Island - A Dungeons & Dragons 2024 Campaign</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>Directory</li>
+      <li>Downloads</li>
+    </ul>
+  </nav>
+
+  <p>Scroll down to see the navbar stick to the top.</p>
+  <p>More content here...</p>
+  <p>Even more content...</p>
+</body>
 </html>
