--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     </ul>
   </nav>
 
-  <p>Scroll down to see the navbar stick to the top.</p>
-  <p>More content here...</p>
-  <p>Even more content...</p>
+  <div style="height: 1000px;"> <p>Scroll down to see the navbar stick to the top.</p>
+    <p>More content here...</p>
+    <p>Even more content...</p>
+  </div>
 </body>
 </html>
