--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
   <title>The Island - A Dungeons & Dragons 2024 Campaign</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+<nav>
+  <p>Testing</p>
+</nav>
 <body>
-  <nav>
-    <ul>
-      <li>Home</li>
-      <li>Directory</li>
-      <li>Downloads</li>
-    </ul>
-  </nav>
-
   <div style="height: 1000px;"> <p>Scroll down to see the navbar stick to the top.</p>
     <p>More content here...</p>
     <p>Even more content...</p>
