index.html will display tinos in navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Tinos:wght@700&display=swap" rel="stylesheet">
 </head>
 <nav>
-  <p>Testing</p>
+  <h1>Testing</h1>
 </nav>
 <body>
   <div style="height: 1000px;"> <p>Scroll down to see the navbar stick to the top.</p>
