--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>The Island - A Dungeons & Dragons 2024 Campaign</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Tinos:wght@700&display=swap" rel="stylesheet">
-</head>
-<nav>
-  <h1>Testing</h1>
-</nav>
-<body>
-  <div style="height: 1000px;"> <p>Scroll down to see the navbar stick to the top.</p>
-    <p>More content here...</p>
-    <p>Even more content...</p>
-  </div>
-</body>
+  <head>
+    <title>The Island - A Dungeons & Dragons 2024 Campaign</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tinos:wght@700&display=swap" rel="stylesheet">
+    <nav>
+      <h1>Home</h1>
+      <h1>Directory</h1>
+      <h1>Downloads</h1>
+    </nav>
+  </head>
+  <body>
+    <div style="height: 1000px;"> 
+      <p>Scroll down to see the navbar stick to the top.</p>
+      <p>More content here...</p>
+      <p>Even more content...</p>
+    </div>
+  </body>
 </html>
